set and get user preferences
