# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\ArticleController;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\PreferenceController;
 use App\Http\Controllers\ResetPasswordController;
 use Illuminate\Support\Facades\Route;
 
@@ -12,6 +13,9 @@ Route::post('reset-password', [ResetPasswordController::class, 'resetPassword'])
 Route::middleware('auth:sanctum')->group(function () {
     Route::post('logout', [AuthController::class, 'logout'])->name('logout');
 
-    Route::get('/articles', [ArticleController::class, 'index'])->name('article.index');
-    Route::get('/articles/{article}', [ArticleController::class, 'show'])->name('article.show');
+    Route::get('articles', [ArticleController::class, 'index'])->name('article.index');
+    Route::get('articles/{article}', [ArticleController::class, 'show'])->name('article.show');
+
+    Route::post('preferences', [PreferenceController::class, 'store']);
+    Route::get('preferences', [PreferenceController::class, 'index']);
 });
